--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
+    "@mantine/spotlight": "^6.0.17",
     "@tabler/icons-react": "^2.30.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "react": "^18.2.0",
