--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^6.0.17",
     "@mantine/spotlight": "^6.0.17",
     "@tabler/icons-react": "^2.30.0",
+    "@vercel/analytics": "^1.0.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
